dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(rctd, 0.0.0)

dnl Specify a header configuration file
AM_CONFIG_HEADER(config.h)

dnl Checks for programs
AC_ISC_POSIX
dnl AC_PROG_CC
AC_PROG_CXX
AM_PROG_CC_STDC
AC_PROG_RANLIB
AC_HEADER_STDC

dnl Debugging flags
AC_ARG_ENABLE(debug,
[  --enable-debug=[no/minimum/yes] turn on debugging [default=minimum]],
  ,                                                                     
  enable_debug=minimum)                                                 
                       
if test "x$enable_debug" = "xyes"; then
  DEBUG_FLAGS="-DDEBUG"      
else                                   
  if test "x$enable_debug" = "xno"; then
    DEBUG_FLAGS=""                      
  else                                  
    DEBUG_FLAGS=""
  fi              
fi                
AC_SUBST(DEBUG_FLAGS)

dnl Use -Wall if we have gcc.
dnl changequote(,)dnl
dnl if test "x$GCC" = "xyes"; then
dnl   case " $CFLAGS " in
dnl   *[\ \ ]-Wall[\ \      ]*) ;;
dnl   *) CFLAGS="$CFLAGS -Wall" ;;
dnl   esac
dnl fi
dnl changequote([,])dnl

AC_OUTPUT([
Makefile
src/Makefile
src/skeletons/Makefile
])
